<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8FAFB">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnShowFull"
        android:clipToPadding="false"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDetailFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="Загруженный файл.pdf"
                android:textColor="#263238"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                app:cardBackgroundColor="#E0F2F1"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/ivContractIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/outline_assignment_24"
                    app:tint="#4DB6AC" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:text="@string/end_analyzing"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRiskPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="35%"
                    android:textColor="#263238"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/riskProgressBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:progress="35" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="12dp"
                android:text="@string/risky_moments"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRiskyMoments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <TextView
                android:id="@+id/tvEmptyMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/no_risks"
                android:textColor="#90A4AE"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56sp"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShowFull"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:backgroundTint="#4DB6AC"
            android:text="@string/see_contract"
            android:textAllCaps="false"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShowConspect"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:backgroundTint="#4DB6AC"
            android:text="@string/see_contract_conspect"
            android:textAllCaps="false"
            app:cornerRadius="8dp" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="gone"/>

</RelativeLayout>